welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: expected class or object definition
def fonctionTest() : Boolean={
^ColumnByColumn:11: error: Missing closing brace `}' assumed here
def Colonne(){
^ColumnByColumn:11: error: expected class or object definition
def Colonne(){
^